EXCEL_AutoUpdate/CFTClog.log
/usr/bin/python: can't find '__main__' module in 'anaconda3'
  File "Anaconda3-2020.02-Linux-x86_64.sh", line 9
    export OLD_LD_LIBRARY_PATH=$LD_LIBRARY_PATH
                             ^
SyntaxError: invalid syntax
  File "api.php", line 1
    array(7) {
             ^
SyntaxError: invalid syntax
/usr/bin/python: can't find '__main__' module in 'autocommit'
/usr/bin/python: can't find '__main__' module in 'html'
/usr/bin/python: can't find '__main__' module in 'inotify-tools-3.14'
  File "test2.php", line 1
    Message To server : DJ  084636    1F125110049 001        0000881L123456                                  172.16.214.65                           1    N
             ^
SyntaxError: invalid syntax
  File "test2.php.1", line 1
    Message To server : DJ  084636    1F125110049 001        0000881L11111                                   172.16.214.65                           1    N
             ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "test.html", line 1, in <module>
    abc
NameError: name 'abc' is not defined
  File "test.php", line 1
    Socket created Message send successfully string(2) " "
                 ^
SyntaxError: invalid syntax
